--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -11,7 +11,7 @@
             font: normal 20pt Arial;
         }
         h1 {
-            columns: rgb(255, 212, 22);
+            color: rgb(255, 212, 22);
         }
     </style>
 </head>
@@ -20,9 +20,8 @@
     <p>Já me livrei da maldição!!!</p>
 
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é seu nome?')
+        var nome = window.prompt('Qual é seu nome?')
+        window.alert('É um grande prazer em te conhecer, ' + nome + '!')
     </script>
 </body>
 </html>
