--- a/aula12ex/ex014/modelo.html
+++ b/aula12ex/ex014/modelo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo.css">
 
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do Dia</h1>
     </header>
@@ -17,7 +17,7 @@
             Agora são horas
         </div>
         <div id="foto">
-            <img src="fotomanha.png" alt="Foto do dia" >
+            <img id="imagem" src="fotomanha.png" alt="Foto do dia" >
         </div>
     </section>
     <footer>
