--- a/aula12ex/ex015/modelo.html
+++ b/aula12ex/ex015/modelo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilo.css">
 
 </head>
-<body onload="carregar()">
+<body>
     <header>
         <h1>Verificador de idade</h1>
     </header>
@@ -26,7 +26,6 @@
             <p>
                 <input type="button" value="Verificar" onclick="verificar()">
             </p>
-
         </div>
         <div id="res">
             Preencha os dados acima para obter o resultado!
@@ -35,8 +34,6 @@
     <footer>
         <p>&copy; CursoemVideo</p>
     </footer>
-    <script src="script.js">
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
