exercício de tabuada e de contador finalizados

--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -27,7 +27,7 @@
             <input type="button" value="Contar" onclick="contar()">
         </div>
         <div id="resultado">
-            
+            Preparando a contagem...
         </div>
     </section>
     <footer>
