--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hora do Dia</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div id="msg">
-            Agora são horas
+        <div>
+            <p>Número:
+                <input type="number" name="num" id="num" placeholder="Digite um número">
+                <input type="button" value="Gerar Tabuada" onclick="gerarTabuada()">
+            </p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="fotomanha.png" alt="Foto do dia" >
+        <div>
+            <h4>Resultado da Tabuada:</h4>
+            <select name="tabuada" id="resultadoTabuada" size="10"></select>
+            <!-- <ul id="resultadoTabuada" style="list-style: none; padding-left: 0;"> -->
+
+            </ul>
         </div>
     </section>
     <footer>
